<resources>
    <string name="app_name" translatable="false">CoronaApps</string>
    <string name="nullText" translatable="false">Null</string>

    <string name="data_1">Terkonfirmasi</string>
    <string name="data_2">Sembuh</string>
    <string name="data_3">Kematian</string>

    <string name="total_kasus" translatable="false">Total kasus</string>
    <string name="total_kematial" translatable="false">Kematian</string>
    <string name="total_sembuh" translatable="false">Sembuh</string>

    <string name="update_corona_case">UPDATE CORONA CASE</string>
    <string name="last_update_10_january_2021">Last Update 10 January 2021</string>
    <string name="corona_selesai_akhir_pekan_ini">Corona Selesai akhir Pekan ini</string>
    <string name="more">More</string>
    <string name="covid_19">Covid-19</string>
    <string name="in">IN</string>
    <string name="indonesia">INDONESIA</string>
    <string name="covid_19_update">COVID-19 UPDATE</string>
    <string name="statistik">STATISTIK</string>

    <string name="feeling_sick" translatable="false">Are you feeling sick?</string>
    <string name="help" translatable="false">If you feel sick with any of covid-19 symptoms\nplease call or SMS us immediately for help.</string>
    <string name="Call_Now" translatable="false">Call Now</string>
    <string name="Send_SMS" translatable="false">Send SMS</string>
    <string name="moreInformation" translatable="false">For More Information Click Here!</string>

</resources>