<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailCountryIndo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="-40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ui" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorT">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|enterAlways">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:orientation="vertical">

                <View
                    android:layout_width="100dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_all" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:orientation="vertical"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:id="@+id/tv_provinsi_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded"
                    android:gravity="center"
                    android:padding="@dimen/normal_padding"
                    android:text="Province"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="3.3"
                        android:background="@drawable/rounded_bg_grey"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/coronaoren" />

                        <TextView
                            android:id="@+id/tv_kasus_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/ColorYellow"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dtl_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/total_kasus"
                            android:textColor="@color/ColorYellow" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="3.3"
                        android:background="@drawable/rounded_bg_grey"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/meninggoy" />

                        <TextView
                            android:id="@+id/tv_kematian_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/ColorRed"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dtl_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/total_kematial"
                            android:textColor="@color/ColorRed" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="4dp"
                        android:layout_weight="3.3"
                        android:background="@drawable/rounded_bg_grey"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/love" />

                        <TextView
                            android:id="@+id/tv_sembuh_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/ColorGreen2"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dtl_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/total_sembuh"
                            android:textColor="@color/ColorGreen2" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="315dp"
                        android:layout_marginTop="-55dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/self_reminder2" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="209dp"
                        android:fontFamily="@font/amiko_semibold"
                        android:text="@string/feeling_sick"
                        android:textColor="@color/ColorBlack"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/amiko_semibold"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/help"
                        android:textColor="@color/ColorBlack"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView1" />

                    <Button
                        android:id="@+id/btnCall"
                        android:layout_width="141dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/call_button"
                        android:drawableLeft="@drawable/ic_baseline_call_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/basic"
                        android:paddingLeft="16dp"
                        android:text="@string/Call_Now"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/btnSms"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <Button
                        android:id="@+id/btnSms"
                        android:layout_width="146dp"
                        android:layout_height="45dp"
                        android:background="@drawable/send_sms_button"
                        android:drawableLeft="@drawable/ic_baseline_sms_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/basic"
                        android:paddingLeft="16dp"
                        android:text="@string/Send_SMS"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/btnCall"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btnCall"
                        app:layout_constraintTop_toTopOf="@+id/btnCall" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>