<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndonesiaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonLove"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="1dp"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:src="@drawable/heartcolor" />

        <TextView
            android:layout_marginTop="-29dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="INDONESIA"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
            android:text="COVID-19 UPDATE"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="Last Update 10 January 2021"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/box_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="#ffffff">

            <Spinner
                android:id="@+id/spinnerIndo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/indonesia_spinner_row">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_corner_local"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/coronaoren"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:text="300"
                    android:textAlignment="center"
                    android:textColor="#FFCB2E"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/data_1"
                    android:textAlignment="center"
                    android:textColor="#FFCB2E"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/love"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="#21AA33"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/data_2"
                    android:textAlignment="center"
                    android:textColor="#21AA33"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/meninggoy"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:text="200"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/data_3"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:text="STATISTIK"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_corner_local"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->


</FrameLayout>